# motion2emotion

./: README.md  consts.py  data_process.py  init.sh  main.py  model.py  pyproject.toml  run.sh  statistics.py  utils.py
